--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,91 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
+<h2>Hello</h2>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet">
-  <title>Upload Bills</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://code.jquery.com/ui/1.12.0-beta.1/jquery-ui.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.1.135/jspdf.min.js"></script>
-  <script type="text/javascript" src="http://cdn.uriit.ru/jsPDF/libs/adler32cs.js/adler32cs.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2014-11-29/FileSaver.min.js
-"></script>
-  <script type="text/javascript" src="libs/Blob.js/BlobBuilder.js"></script>
-  <script type="text/javascript" src="http://cdn.immex1.com/js/jspdf/plugins/jspdf.plugin.addimage.js"></script>
-  <script type="text/javascript"
-    src="http://cdn.immex1.com/js/jspdf/plugins/jspdf.plugin.standard_fonts_metrics.js"></script>
-  <script type="text/javascript"
-    src="http://cdn.immex1.com/js/jspdf/plugins/jspdf.plugin.split_text_to_size.js"></script>
-  <script type="text/javascript" src="http://cdn.immex1.com/js/jspdf/plugins/jspdf.plugin.from_html.js"></script>
-  <script type="text/javascript" src="js/basic.js"></script>
-</head>
-
-<body>
-  <p>
-    dashboard works!
-  </p>
-  <button style="color:#000; text-transform: capitalize" onclick="download_csv()"
-    class="btn btn-primary nav-link">Download CSV Template</button>
-  <table id="tblCustomers" class="table table-bordered table-striped">
-    <thead class=" text-primary">
-      <tr style="color: #000; background-color:#9CC4DD;">
-        <th>No</th>
-        <th>Bill Number</th>
-        <th>Customer Name</th>
-        <th>Customer Phone</th>
-        <th>Customer Email</th>
-        <th>Narration</th>
-        <th>Amount</th>
-        <th>Quantity</th>
-        <th>Bill Date</th>
-        <th>Bill status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      ​
-    </tbody>
-
-  </table>
-  <input style="background-color:#9CC4DD; color:#000;" class="btn btn-lg" type="button" id="btnExport"
-    value="Download pdf" />
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
-  <script type="text/javascript">
-    $("body").on("click", "#btnExport", function () {
-      html2canvas($('#tblCustomers')[0], {
-        onrendered: function (canvas) {
-          var data = canvas.toDataURL();
-          var docDefinition = {
-            content: [{
-              image: data,
-              width: 500
-            }]
-          };
-          pdfMake.createPdf(docDefinition).download("Table.pdf");
-        }
-      });
-    });
-  </script>
-
-</body>
-
-</html>
+<app-news></app-news>
